Ajustes no dockerfile e compose

--- a/backend/DriverManagement/DriverManagement.Api/appsettings.json
+++ b/backend/DriverManagement/DriverManagement.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Username=postgres;Password=postgres;Server=db;Database=drivers;Port=5432;"
+    "DefaultConnection": "Username=postgres;Password=postgres;Server=localhost;Database=drivers;Port=2345;"
   }
 }
