--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
   db:
     container_name: db
     image: postgres
+    volumes:
+      - .docker/.postgres:/var/lib/postgresql/data:rw
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
