--- a/frontend/driver-management/package.json
+++ b/frontend/driver-management/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
     "styled-components": "^6.0.8"
   },
