--- a/frontend/driver-management/package.json
+++ b/frontend/driver-management/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
