feat: Final ajusts

--- a/backend/DriverManagement/DriverManagement.Api/appsettings.Development.json
+++ b/backend/DriverManagement/DriverManagement.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Username=postgres;Password=postgres;Server=localhost;Database=drivers;Port=2345;"
+    "DefaultConnection": "Username=postgres;Password=postgres;Server=db;Database=drivers;Port=5432;"
   }
 }
