--- a/frontend/driver-management/Dockerfile
+++ b/frontend/driver-management/Dockerfile
@@ -2,19 +2,14 @@ FROM node:18-alpine3.14
 
 WORKDIR /react-vite-app
 
-ENV DOCKERIZE_VERSION v0.7.0
-
-RUN apk update --no-cache \
-    && apk add --no-cache wget openssl \
-    && wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
-    && apk del wget
-
-EXPOSE 3000
-
 COPY package.json package-lock.json ./
 
 RUN npm install --silent
 
+EXPOSE 3001
+
 COPY . ./
 
-CMD ["npm", "run", "dev"]
+# CMD ["npm", "run", "dev", "--", "--port", "3000"]
+
+
